作业补完计划

--- a/pages/css/css18.html
+++ b/pages/css/css18.html
@@ -13,10 +13,11 @@
 
         .img-wrap {
             transform-style: preserve-3d;
+            white-space: nowrap;
         }
 
         .img1 {
-            transform: translate3d(80%, 0, -10px) scale(0.8, 0.8);
+            transform: translate3d(70%, 0, -10px) scale(0.8, 0.8);
         }
 
         .img2 {
